--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Malla curricular – Medicina Veterinaria</h1>
+    <h1>Malla curricular interactiva – Medicina Veterinaria</h1>
     <div class="leyenda">
-      <span class="color aprobado">🟩 Aprobado</span>
-      <span class="color reprobado">🟥 Reprobado</span>
     </div>
   </header>
 
