--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </div>
   </header>
 
+  <!-- Aquí agregamos los botones -->
+  <div style="margin: 20px 0;">
+    <button id="guardarEstado">Guardar Estado</button>
+    <button id="cargarEstado">Cargar Estado</button>
+  </div>
+
   <main id="malla"></main>
 
   <script src="script.js"></script>
